# service-template

./: .editorconfig  .gitignore  README.md  alembic.ini  pyproject.toml  run_bus.cmd  run_http.cmd
app/: __init__.py  fastapi.py  faststream.py  main.py
app/controllers/http/: __init__.py
app/controllers/http/v1/: permission.py
app/core/: config.py  ioc.py
app/core/log/: main.py  processors.py  uvicorn.py
app/domain/: __init__.py  circulars.py
app/domain/auth/: exceptions.py  usecases.py
app/domain/auth/dto/: __init__.py  base.py  fields.py  request.py  response.py
app/domain/common/: usecases.py
app/domain/common/dto/: __init__.py  base.py  fields.py  helper.py  mixins.py  pagination.py
app/domain/common/exceptions/: __init__.py  base.py  repository.py
app/domain/common/models/: aggregate.py  base.py
app/domain/permission/: exceptions.py  model.py  usecases.py
app/domain/permission/dto/: __init__.py  fields.py  permission.py
app/domain/role/: exceptions.py  model.py
app/domain/role/dto/: __init__.py  fields.py  role.py
app/domain/user/: exceptions.py  handlers.py  model.py  usecases.py
app/domain/user/dto/: __init__.py  fields.py  helper.py  mixins.py  profile.py  request.py  user.py
app/infrastructure/database/: __init__.py  exception_mapper.py
app/infrastructure/database/adapters/: adapters.py  postgres.py  redis.py
app/infrastructure/database/alembic/: README  env.py  script.py.mako
app/infrastructure/database/models/: __init__.py  base.py  columns.py  permission.py  relations.py  role.py  (+1 more)
app/infrastructure/usecases/: __init__.py  auth.py  permission.py  role.py  usecases.py  user.py
app/presentation/api/: __init__.py
app/utils/security/: jwt.py  pwd.py  security.py
static/: redoc.standalone.js
(+39 files in other folders)
